@@ -1115,11 +1115,27 @@ static LRESULT CALLBACK WndProc(HWND hWnd, UINT uMsg, WPARAM wParam, LPARAM lPar
   case WM_MOUSEWHEEL: {
     static int delta = 0; // running total of all motion
     delta += (SHORT)(HIWORD(wParam));
+    Fl::e_dx = 0;
     Fl::e_dy = -delta / WHEEL_DELTA;
     delta += Fl::e_dy * WHEEL_DELTA;
     if (Fl::e_dy) Fl::handle(FL_MOUSEWHEEL, window);
     return 0;
   }
+
+// This is only defined on Vista and upwards...
+#ifndef WM_MOUSEHWHEEL
+#define WM_MOUSEHWHEEL 0x020E
+#endif
+      
+  case WM_MOUSEHWHEEL: {
+      static int delta = 0; // running total of all motion
+      delta += (SHORT)(HIWORD(wParam));
+      Fl::e_dy = 0;
+      Fl::e_dx = delta / WHEEL_DELTA;
+      delta -= Fl::e_dx * WHEEL_DELTA;
+      if (Fl::e_dx) Fl::handle(FL_MOUSEWHEEL, window);
+      return 0;
+    }
 
   case WM_GETMINMAXINFO:
     Fl_X::i(window)->set_minmax((LPMINMAXINFO)lParam);
