@@ -32,6 +32,8 @@ CHANGES IN FLTK 1.3.1
 	(STR #2600)
 	- Improved the description of page size and orientation by 
 	Fl_PostScript_File_Device.
+	- Added support for horizontal wheel movement under X11 and MSWindows Vista
+	and above (STR #2644).
 
 CHANGES IN FLTK 1.3.0
 
